[workspace]
resolver = "3"
members = [
    "rust/rs_cl_forge",
    "rust/rs_verify",
    "rust/rs_cmf",
]

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies.pyo3]
version = "0.27.2"
features = ["extension-module"]

[workspace.dependencies.reqwest]
version = "0.13.1"
features = [
    "blocking",
    "rustls",
    "query",
    "json",
]

[workspace.dependencies.secrecy]
version = "0.10.3"

[workspace.dependencies.thiserror]
version = "2.0.17"

[workspace.dependencies.serde_json]
version = "1.0.149"
