[project]
name = "cl-forge"
description = "Simple yet powerful Chilean and other tools written in Rust and Python."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []
dynamic = ["version"]

[[authors]]
name = "Schiaffino Tyrer, Matías"
email = "matias.scht@gmail.com"

keywords = [
    "chile", "cl",
    "utils", "tools",
    "rut", "run",
    "validators", "api",
    "python", "rust",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/mschiaff/cl-forge"
Repository = "https://github.com/mschiaff/cl-forge.git"
Issues = "https://github.com/mschiaff/cl-forge/issues"

[build-system]
requires = ["maturin>=1.11.5"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/rs_cl_forge/Cargo.toml"
module-name = "cl_forge.core._rs_cl_forge"
include = ["src/cl_forge/*.pyi", "tests/*.py"]
python-source = "src"
bindings = "pyo3"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "maturin>=1.11.5",
    "notebook>=7.5.2",
    "ruff>=0.14.13",
    "pytest>=8.0.0",
]

build = [
    "maturin>=1.11.5",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = []
