[project]
name = "cl-forge"
description = "Simple yet powerful Chilean and other tools written in Rust and Python."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dynamic = ["version"]

authors = [
    { name = "Matías Schiaffino Tyrer", email = "matias.scht@gmail.com"}
]

dependencies = [
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
]

keywords = [
    "chile", "cl",
    "utils", "tools",
    "rut", "run",
    "validators", "api",
    "python", "rust",
]

[project.urls]
Homepage = "https://github.com/mschiaff/cl-forge"
Repository = "https://github.com/mschiaff/cl-forge.git"
Issues = "https://github.com/mschiaff/cl-forge/issues"

[build-system]
requires = ["maturin>=1.11.5"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/cl_forge/Cargo.toml"
module-name = "cl_forge.core.impl.rs_cl_forge"
include = [
    "src/cl_forge/*.pyi",
    "src/cl_forge/py.typed",
    "tests/*.py",
]
python-source = "src"
bindings = "pyo3"

[dependency-groups]
# Development
test = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
]

build = [
    "maturin>=1.11.5,<2.0",
]

docs = [
    "mkdocs-material>=9.7.1",
]
dev = [
    {include-group = "build"},
    {include-group = "docs"},
    {include-group = "test"},
    "cl-forge[notebook]",
]

[project.optional-dependencies]
# Interoperability
pyarrow = [
    "pyarrow>=23.0.0",
]
polars = [
    "cl-forge[pyarrow]",
    "polars>=1.38.0",
]
pandas = [
    "cl-forge[pyarrow]",
    "pandas-stubs>=3.0.0.260204",
    "pandas[performance]>=3.0.0",
]
interop = [
    "cl-forge[polars]",
    "cl-forge[pandas]",
]

# Excel
calamine = [
    "fastexcel>=0.19.0",
]
xlsxwriter = [
    "xlsxwriter>=3.2.9",
]
openpyxl = [
    "openpyxl>=3.1.5",
]
excel = [
    "cl-forge[calamine]",
    "cl-forge[xlsxwriter]",
    "cl-forge[openpyxl]",
]

# Analytics
analytics = [
    "cl-forge[polars]",
    "cl-forge[calamine]",
    "cl-forge[xlsxwriter]",
]

# Jupyter Notebook
notebook = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.3",
]

# All
all = [
    "cl-forge[interop]",
    "cl-forge[excel]",
    "cl-forge[notebook]",
]

[tool.ruff]
line-length = 90
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/cl_forge/core/cmf_ipc.py" = ["A002"]
"src/cl_forge/verify.pyi" = ["A002"]
